# Kivalins_Manager

./: .gitignore  BaseCreate.h  BoardData.cpp  BoardData.h  BoardIcon.qml  BoardIconDescriptionWindow.qml  BoardObject.h  BoardPage.qml  BoardsPage.qml  CMakeLists.txt  CircularButton.qml  CreateBoard.cpp  CreateBoard.h  CreateBoardWindow.qml  CreateTask.cpp  CreateTask.h  CreateTaskWindow.qml  CreateType.cpp  CreateType.h  CreateTypeWindow.qml  CustomButton.qml  DataBase.cpp  ErrorWindow.qml  FilterTasksWindow.qml  GlobalVariables.cpp  GlobalVariables.h  Main.qml  Navbar.qml  SettingsPage.qml  StartPage.qml  StatisticsWindow.qml  SuccessWindow.qml  TaskData.cpp  TaskData.h  TaskIcon.qml  TaskIconDescriptionWindow.qml  TypeData.cpp  TypeData.h  TypeIcon.qml  TypeObject.h  (+3 more)
board/: BoardIconDescriptionWindow.qml
dto/: SettingsPage.qml  StatisticsWindow.qml
qml/board/: BoardIcon.qml  BoardPage.qml  BoardsPage.qml  CreateBoardWindow.qml
qml/dto/: SettingsPage.qml
qml/task/: FilterTasksWindow.qml  TaskIconDescriptionWindow.qml
qml/type/: CreateTypeWindow.qml  TypesBoard.qml
scr/creation/: BaseCreate.cpp  BaseCreate.h  CreateBoard.cpp  CreateBoard.h  CreateTask.cpp  CreateTask.h  CreateType.cpp  CreateType.h
scr/data/: BoardData.cpp  BoardData.h  TaskData.cpp  TaskData.h  TypeData.cpp  TypeData.h
scr/database/: DataBase.cpp  DataBase.h
scr/dto/: GlobalVariables.h
scr/object/: BoardObject.h  TaskObject.h  TypeObject.h
task/: CreateTaskWindow.qml  TaskIcon.qml  UpdateTaskWindow.qml
type/: TypeIcon.qml
